[project]
name = "depcleaner"
version = "1.0.1"
description = "Detect and remove unused Python dependencies"
authors = [{name = "DepCleaner Team", email = "gmail@google.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 🔥 Added your GitHub links
[project.urls]
Homepage = "https://github.com/Jermy-tech/depcleaner"
Repository = "https://github.com/Jermy-tech/depcleaner"
Issues = "https://github.com/Jermy-tech/depcleaner/issues"

[project.scripts]
depcleaner = "depcleaner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]
