[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "depcleaner"
version = "2.0.0"
description = "Python dependency cleanup tool"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}

authors = [
    {name = "JermyTech", email = "NIL@Nil.COM"}
]

keywords = [
    "dependencies", "imports", "cleanup",
    "python", "jupyter", "notebooks"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance"
]

dependencies = [
    "tomli>=2.0.0"
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=6.0.0,<7.2.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0.0"
]

# Makes installing all features possible via:
#   pip install depcleaner[all]
all = [
    "depcleaner[rich]"
]

[project.urls]
Homepage = "https://github.com/Jermy-tech/depcleaner"
Documentation = "https://github.com/Jermy-tech/depcleaner#readme"
Repository = "https://github.com/Jermy-tech/depcleaner"
Issues = "https://github.com/Jermy-tech/depcleaner/issues"

[project.scripts]
depcleaner = "depcleaner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["depcleaner*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# prevent pytest crashing when pytest-cov is unavailable
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py38"]
include = "\\.pyi?$"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
